--- a/scss/style.scss
+++ b/scss/style.scss
@@ -507,6 +507,10 @@ main {
 					bottom: -50px;
 					left: 50%;
 					transform: translateX(-50%);
+					transition:0.5s;
+					border:3px solid transparent;
+					box-sizing: border-box;
+					
 
 					h2 {
 						font-size: 20px;
@@ -516,6 +520,12 @@ main {
 					p {
 						font-size: 16px;
 						margin-bottom: 20px;
+						width: 200px;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						display: -webkit-box;
+						-webkit-line-clamp: 2;
+						-webkit-box-orient: vertical;
 					}
 
 					span {
@@ -532,6 +542,12 @@ main {
 
 				&:nth-of-type(3) {
 					top: 150px;
+				}
+				&:hover {
+					.text_box {
+						bottom:-10px;
+						border-color:$pointColor;
+					}
 				}
 			}
 			&.on {
@@ -583,7 +599,7 @@ main {
 			float: right;
 			overflow: hidden;
 			transition: 1s;
-			opacity: 0;
+
 			transform: translateX(20%);
 			
 
@@ -628,7 +644,7 @@ main {
 			position: absolute;
 			left: 0;
 			bottom: 80px;
-			opacity: 1;
+
 			transition: 1s linear;
 			transform: translateX(-50%);
 
@@ -1410,6 +1426,69 @@ main {
 	}
 }
 
+#repairPopup{
+	width:80vw;
+	height:70vh; 
+	position:fixed; 
+	top:50%; left:50%; 
+	transform:translate(-50%,-50%);
+	display:none; 
+
+	.top{
+		width:0%; height:5px; 
+		background:$pointColor; 
+		position:absolute; left:0; top:0; 
+	}
+	.inner{
+		width:100%; height:100%; 
+		background:rgba(0,0,0,0.8); 
+		position:absolute; top:0; left:0; 
+		opacity:0; 
+		padding:50px; 
+		border:2px solid $pointColor;
+		overflow: auto;
+
+		.pic{
+			width:100%; 
+			height:100%;
+			img {
+				width:100%;
+				height:100%;
+				object-fit: cover;
+			}
+		}
+		.cont{
+			width:65%; 
+			display:flex; 
+			flex-wrap:wrap; 			
+			align-items:center; 
+			padding:20px 0;
+			h2{
+				font-size:30px;
+				color:#fff; 
+				margin-bottom:20px; 
+			}
+			p{
+				font:16px/1.3 'arial';
+				color:#aaa; 
+			}
+			
+		}
+
+
+	}
+	.repair_close{
+		position:absolute; 
+		top:10px; 
+		right:20px; 
+		color:#111;
+		border:1px solid $pointColor;
+		background:#fff;
+		padding:5px;
+		font-weight: 700;
+	}
+}
+
 
 
 /*footer ---------------------------------------*/
@@ -1612,7 +1691,6 @@ main {
 		}
 	}
 }
-
 
 /*mobile ------------------------------------*/
 @media screen and (max-width: $mini) {
@@ -1867,6 +1945,14 @@ main{
 			text-align: center;
 		}
 	} 
+}
+#repairPopup{
+	.inner{
+		.cont{
+			width:100%; 
+
+		}
+	}
 }
 
 	/*footer ---------------------------------------*/
