--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,6 +1,5 @@
 .media {
   padding-top: 0;
-
   .visual {
     position: relative;
     width: 100%;
@@ -15,7 +14,6 @@
       padding: 80px;
       box-sizing: border-box;
       text-align: center;
-
       h2 {
         font-size: 3em;
         line-height: 1.3;
@@ -24,9 +22,7 @@
         top: 20px;
         z-index: 1;
         opacity: 0;
-        animation: visual_txt 1s linear forwards 1s;
       }
-
       p {
         top: 20px;
         margin-top: 50px;
@@ -34,10 +30,7 @@
         position: relative;
         z-index: 1;
         opacity: 0;
-        animation: visual_txt 1s linear forwards 1.3s;
-
       }
-
       &::after {
         content: '';
         left: 50%;
@@ -48,32 +41,32 @@
         display: block;
         position: absolute;
         background: rgba(255, 255, 255, .8);
-        animation: visual_bg 1s linear forwards;
+      }
+    }
+    &.on{
+      .text_box {
+        h2 {
+          animation: visual_txt 1s linear forwards 1s;
+        }
+        p {
+          animation: visual_txt 1s linear forwards 1.3s;
+        }
+        &::after {
+          animation: visual_bg 1s linear forwards;
+        }
       }
     }
   }
   @keyframes visual_bg {
-    0% {
-      width: 0;
-    }
-    100% {
-      width: 100%
-    }
+    0% {width: 0;}
+    100% {width: 100%}
   }
   @keyframes visual_txt {
-    0% {
-      opacity: 0;
-      top: 20px;
-    }
-    100% {
-      opacity: 1;
-      top: 0;
-    }
+    0% {top: 20px;}
+    100% {opacity: 1;top: 0;}
   }
-
   .media_info {
     padding: 80px 0;
-  
     .text_box {
       position:relative;
       top:50px;
@@ -98,24 +91,19 @@
     .info_list {
       position:relative;
       top:150px;
-
       opacity: 0;
       margin-top: 50px;
       height: 500px;
       transition:0.8s linear ;
-
       &::after {
         content: '';
         display: block;
         clear: both;
       }
-
       article {
         overflow: hidden;
         position: relative;
         float: left;
-        
-
         i {
           position:absolute;
           display: block;
@@ -124,11 +112,9 @@
           width:100%;
           height:100%;
           background:$bgColor;
-          
+          opacity: 0;
         }
       }
-      
-
       .info1 {
         width: calc(70% - 20px);
         margin-right: 10px;
@@ -159,10 +145,11 @@
         opacity: 1;
         article {
           img {animation:imgOpa both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;}
-          i {animation:imgAniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;}
+          i {animation:imgAniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+          opacity: 1;
+          }
         }
       }
-
     }
   }
   @keyframes imgOpa {
@@ -176,14 +163,12 @@
     50% {transform:translateX(0);}
     100% {transform:translateX(101%);}
     }
-
   .youtube_con { 
     padding-bottom:80px;
   .vid_list {
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 50px;
-
     &::after {
       content: '';
       display: block;
@@ -308,6 +293,9 @@
           display: block;
           width: 100%;
           height: 100%;
+          img {
+            z-index: 1;
+          }
           i {
             position:absolute;
             display: block;
@@ -316,6 +304,7 @@
             width:100%;
             height:100%;
             background:$bgColor;
+            opacity: 0;
           }
         }
    
@@ -340,7 +329,6 @@
             color: #666;
             margin-bottom: 20px;
           }
-
           span {
             position:absolute;
             bottom:10px;
@@ -362,7 +350,9 @@
       article {
         a {
           img {animation:imgOpa both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;}
-          i {animation:imgAniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;}
+          i {animation:imgAniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+            opacity: 1;
+          }
         }
       }
 
@@ -381,7 +371,6 @@
       height:100%;width:100%;
       background:url(../img/media/banner.jpg) no-repeat center/cover; 
       opacity: 0.5;
-    
     }
     .text_box {
       position:absolute;
@@ -398,8 +387,6 @@
       text-align: center;
       font-size: 30px;
       font-weight: 700;
-     
-
     }
     &.on {
       .text_box{
@@ -408,7 +395,6 @@
     }
     }
   }
-
 @keyframes banner {
   0%{top:80%;opacity: 0;}
   100%{top:50%;opacity: 1;}
